poprawki działania panelu dostępności

--- a/index.html
+++ b/index.html
@@ -107,7 +107,6 @@
     </nav>
 
     <main id="main-content" class="container">
-        
         <section id="o-projektach" aria-labelledby="o-projektach-heading">
             <h2 id="o-projektach-heading">O projektach</h2>
             <p>Śląskie Centrum Profilaktyki i Psychoterapii realizuje projekty skierowane do mieszkańców, pracowników i uczniów miasta Katowice oraz Rudy Śląskiej:</p>
@@ -120,7 +119,6 @@
                 <li>"Praktykant - doświadczenie na wagę złota"</li>
             </ul>
         </section>
-
         <section id="strefa-katowice" aria-labelledby="strefa-katowice-heading">
             <h2 id="strefa-katowice-heading">Strefa Transformacji w Katowicach 2.0</h2>
             <p>Śląskie Centrum Profilaktyki i Psychoterapii realizuje projekt skierowany do mieszkańców, pracowników i uczniów miasta Katowice. Oferujemy działania na rzecz rozwoju społeczności lokalnej.</p>
@@ -210,7 +208,7 @@
             <div class="document-link-wrapper"><a href="dokumenty-converted/strefa-ruda/HFW_Strefa_Transformacji_Ruda_SlAska_03_2025.pdf" target="_blank" aria-label="HFW Strefa Transformacji Ruda Śląska 03 2025 - otworzy się w nowej karcie">HFW Strefa Transformacji Ruda Śląska 03 2025</a> (<a href="dokumenty-converted/strefa-ruda/HFW_Strefa_Transformacji_Ruda_SlAska_03_2025.pdf" target="_blank" aria-label="PDF, 228 KB - otworzy się w nowej karcie">PDF: 228 KB</a>, <a href="dokumenty-converted/strefa-ruda/HFW_Strefa_Transformacji_Ruda_SlAska_03_2025.docx" target="_blank" aria-label="WORD, 102 KB - zostanie pobrany">WORD: 102 KB</a>)</div>
             <div class="document-link-wrapper"><a href="dokumenty/strefa-ruda/HFW_Strefa_Ruda_06_2025.pdf" target="_blank" aria-label="HFW Strefa Ruda 06 2025 - otworzy się w nowej karcie">HFW Strefa Ruda 06 2025</a> <span class="file-info">(PDF: 219 KB)</span></div>
             <div class="document-link-wrapper"><a href="dokumenty/strefa-ruda/Klauzula_RODO_SCPIP_-_Zwrotnica.docx" target="_blank" aria-label="Klauzula RODO SCPIP - Zwrotnica - zostanie pobrana">Klauzula RODO SCPIP - Zwrotnica</a> <span class="file-info">(WORD: 70 KB)</span></div>
-            <div class="document-link-wrapper"><a href="dokumenty/strefa-ruda/Zgoda_RODO_Zwrotnica.docx" target="_blank" aria-label="Zgoda RODO Zwrotnica - zostanie pobrana">Zgoda RODO Zwrotnica</a> <span class="file-info">(WORD: 56 KB)</span></div>
+            <div class="document-link-wrapper"><a href="dokumenty/strefa-ruda/Zgoda_RODO_Zwrotnica.docx" target="_blank" aria-label="Zgoda RODO Zwrotnica - zostanie pobrany">Zgoda RODO Zwrotnica</a> <span class="file-info">(WORD: 56 KB)</span></div>
         </section>
 
         <section id="zwrotnica-katowice" aria-labelledby="zwrotnica-katowice-heading">
