Update index.html - claude fix

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <div class="accessibility-info">
                 <h4>Dostępność architektoniczna</h4>
                 <p><strong>Biuro projektu (Katowice, ul. Ligocka 5):</strong></p>
-                <p>Biuro projektu „Zwrotnica – integracja na dobrym torze w Katowicach” usytuowane jest na parterze budynku nr 5 przy ul. Ligockiej w Katowicach.</p>
+                <p>Biuro projektu „Zwrotnica – integracja na dobrym torze w Katowicach" usytuowane jest na parterze budynku nr 5 przy ul. Ligockiej w Katowicach.</p>
                 <p>Biuro projektu posiada dwa wejścia:<br>1. Osobne wejście do Stowarzyszenia Śląskie Centrum Profilaktyki / biura projektu znajduje się z tyłu budynku i prowadzą do niego schody.<br>2. Wejście główne do bloku od strony ulicy Ligockiej, z parkingu przy bloku nr 5.<br>Przy wejściu głównym do bloku znajduje się zarówno podjazd dla wózków, jak i schody.<br>Toaleta dla osób z niepełnosprawnościami znajduje się na parterze, w pomieszczeniach biura projektu.<br>Na parkingu przy głównym wejściu do budynku znajdują się dwa miejsca parkingowe dla osób z niepełnosprawnościami.<br>Z psem asystującym można wejść do budynku i wszystkich pomieszczeń udostępnionych dla uczestników projektu.<br>W biurze projektu, w którym odbywa się zarówno rekrutacja uczestników, jak i spotkania ze specjalistami takimi jak psycholog, doradca zawodowy, specjalista ds. reintegracji, pracownik socjalny, specjalistka ds. szkoleń znajdują się korytarze o wystarczającej szerokości i nie ma progów, co umożliwia swobodne poruszanie się osobom na wózkach.</p>
             </div>
             <div class="contact-info">
@@ -225,7 +225,7 @@
                 <li><strong>Wkład własny Beneficjenta:</strong> 180 663,45 złotych.</li>
             </ul>
             <h4>Cel projektu</h4>
-            <p>„ZWROTNICA – integracja na dobrym torze w Katowicach 2.0” to projekt, którego głównym celem jest nabycie, odbudowa i podtrzymanie umiejętności uczestniczenia w życiu społeczności lokalnej i pełnienia ról społecznych w miejscu pracy, zamieszkania, pobytu oraz zdolności do samodzielnego świadczenia pracy na rynku pracy przez Uczestników Projektu. Działania zapobiegają procesom ubóstwa, marginalizacji i wykluczenia społecznego grupy docelowej.</p>
+            <p>„ZWROTNICA – integracja na dobrym torze w Katowicach 2.0" to projekt, którego głównym celem jest nabycie, odbudowa i podtrzymanie umiejętności uczestniczenia w życiu społeczności lokalnej i pełnienia ról społecznych w miejscu pracy, zamieszkania, pobytu oraz zdolności do samodzielnego świadczenia pracy na rynku pracy przez Uczestników Projektu. Działania zapobiegają procesom ubóstwa, marginalizacji i wykluczenia społecznego grupy docelowej.</p>
             <p>Realizacja celu głównego spowoduje zminimalizowanie problemów zdiagnozowanych na etapie planowania wsparcia tj. wysokiego poziomu wykluczenia społecznego oraz zawodowego przede wszystkim osób z niepełnosprawnością, osób w kryzysie bezdomności oraz osób korzystających ze wsparcia instytucji pomocy społecznej. Zgodnie z wymogami SMART, cel będzie mierzony na podstawie bezpośrednich efektów mających wpływ na zmniejszenie deficytów kompetencyjnych UP:</p>
             <ul>
                 <li>poprawa sytuacji społecznej po IPD,</li>
@@ -260,7 +260,7 @@
             <div class="accessibility-info">
                 <h4>Dostępność architektoniczna</h4>
                 <p><strong>Biuro projektu (Katowice, ul. Ligocka 5):</strong></p>
-                <p>Biuro projektu „Zwrotnica – integracja na dobrym torze w Katowicach” usytuowane jest na parterze budynku nr 5 przy ul. Ligockiej w Katowicach.</p>
+                <p>Biuro projektu „Zwrotnica – integracja na dobrym torze w Katowicach" usytuowane jest na parterze budynku nr 5 przy ul. Ligockiej w Katowicach.</p>
                 <p>Biuro projektu posiada dwa wejścia:<br>1. Osobne wejście do Stowarzyszenia Śląskie Centrum Profilaktyki / biura projektu znajduje się z tyłu budynku i prowadzą do niego schody.<br>2. Wejście główne do bloku od strony ulicy Ligockiej, z parkingu przy bloku nr 5.<br>Przy wejściu głównym do bloku znajduje się zarówno podjazd dla wózków, jak i schody.<br>Toaleta dla osób z niepełnosprawnościami znajduje się na parterze, w pomieszczeniach biura projektu.<br>Na parkingu przy głównym wejściu do budynku znajdują się dwa miejsca parkingowe dla osób z niepełnosprawnościami.<br>Z psem asystującym można wejść do budynku i wszystkich pomieszczeń udostępnionych dla uczestników projektu.<br>W biurze projektu, w którym odbywa się zarówno rekrutacja uczestników, jak i spotkania ze specjalistami takimi jak psycholog, doradca zawodowy, specjalista ds. reintegracji, pracownik socjalny, specjalistka ds. szkoleń znajdują się korytarze o wystarczającej szerokości i nie ma progów, co umożliwia swobodne poruszanie się osobom na wózkach.</p>
             </div>
             <div class="contact-info">
@@ -334,7 +334,7 @@
             <div class="accessibility-info">
                 <h4>Dostępność architektoniczna</h4>
                 <p><strong>Biuro projektu (Katowice, ul. Ligocka 5):</strong></p>
-                <p>Biuro projektu „Zwrotnica – integracja na dobrym torze w Katowicach” usytuowane jest na parterze budynku nr 5 przy ul. Ligockiej w Katowicach.</p>
+                <p>Biuro projektu „Zwrotnica – integracja na dobrym torze w Katowicach" usytuowane jest na parterze budynku nr 5 przy ul. Ligockiej w Katowicach.</p>
                 <p>Biuro projektu posiada dwa wejścia:<br>1. Osobne wejście do Stowarzyszenia Śląskie Centrum Profilaktyki / biura projektu znajduje się z tyłu budynku i prowadzą do niego schody.<br>2. Wejście główne do bloku od strony ulicy Ligockiej, z parkingu przy bloku nr 5.<br>Przy wejściu głównym do bloku znajduje się zarówno podjazd dla wózków, jak i schody.<br>Toaleta dla osób z niepełnosprawnościami znajduje się na parterze, w pomieszczeniach biura projektu.<br>Na parkingu przy głównym wejściu do budynku znajdują się dwa miejsca parkingowe dla osób z niepełnosprawnościami.<br>Z psem asystującym można wejść do budynku i wszystkich pomieszczeń udostępnionych dla uczestników projektu.<br>W biurze projektu, w którym odbywa się zarówno rekrutacja uczestników, jak i spotkania ze specjalistami takimi jak psycholog, doradca zawodowy, specjalista ds. reintegracji, pracownik socjalny, specjalistka ds. szkoleń znajdują się korytarze o wystarczającej szerokości i nie ma progów, co umożliwia swobodne poruszanie się osobom na wózkach.</p>
             </div>
             <div class="contact-info">
