--- a/pages/deklaracja-dostepnosci.html
+++ b/pages/deklaracja-dostepnosci.html
@@ -69,7 +69,14 @@
             </div>
             <div class="modal-body">
                 <p>Użyj klawisza <strong>Tab</strong> aby przechodzić do kolejnych elementów lub <strong>Shift + Tab</strong> aby się cofać.</p>
-                <p>Aby włączyć tryb czytania na głos, otwórz panel dostępności (ikona w prawym dolnym rogu) i aktywuj opcję "Włącz czytanie". Gdy tryb jest aktywny, wciśnij <strong>Enter</strong> na dowolnym tekście, aby go odsłuchać.</p>
+                <p>Aby włączyć tryb czytania na głos, otwórz panel dostępności (ikona w prawym dolnym rogu) i aktywuj opcję "Włącz czytanie".</p>
+                <p><strong>W trybie czytania:</strong></p>
+                <ul>
+                    <li>Wciśnij <strong>Enter</strong> na dowolnym tekście, aby go odsłuchać</li>
+                    <li><strong>Pierwsze kliknięcie</strong> na link - odczytuje treść</li>
+                    <li><strong>Drugie kliknięcie</strong> na link - otwiera link</li>
+                </ul>
+                <p><strong>Nawigacja:</strong> Użyj <strong>Alt + Strzałka w lewo</strong> lub przycisku "Wstecz" przeglądarki, aby wrócić na poprzednią stronę.</p>
                 <p>Wciśnij <strong>Escape</strong> aby zamknąć to okno.</p>
             </div>
         </div>
