Update index.html - struktura pod nowe dzialanie widżetu WCAG

--- a/index.html
+++ b/index.html
@@ -72,9 +72,8 @@
                 <p>Aby włączyć tryb czytania na głos, otwórz panel dostępności (ikona w prawym dolnym rogu) i aktywuj opcję "Włącz czytanie".</p>
                 <p><strong>W trybie czytania:</strong></p>
                 <ul>
-                    <li>Wciśnij <strong>Enter</strong> na dowolnym tekście, aby go odsłuchać</li>
-                    <li><strong>Pierwsze kliknięcie</strong> na link - odczytuje treść</li>
-                    <li><strong>Drugie kliknięcie</strong> na link - otwiera link</li>
+                    <li><strong>Nawigacja klawiszem Tab</strong> - automatycznie czyta treść elementów podczas przechodzenia</li>
+                    <li><strong>Kliknięcie lub Enter</strong> - normalnie otwiera linki i aktywuje przyciski</li>
                 </ul>
                 <p><strong>Nawigacja:</strong> Użyj <strong>Alt + Strzałka w lewo</strong> lub przycisku "Wstecz" przeglądarki, aby wrócić na poprzednią stronę.</p>
                 <p>Wciśnij <strong>Escape</strong> aby zamknąć to okno.</p>
