Update deklaracja-dostepnosci.html - poprawione działanie panelu dostępności

--- a/pages/deklaracja-dostepnosci.html
+++ b/pages/deklaracja-dostepnosci.html
@@ -72,9 +72,8 @@
                 <p>Aby włączyć tryb czytania na głos, otwórz panel dostępności (ikona w prawym dolnym rogu) i aktywuj opcję "Włącz czytanie".</p>
                 <p><strong>W trybie czytania:</strong></p>
                 <ul>
-                    <li>Wciśnij <strong>Enter</strong> na dowolnym tekście, aby go odsłuchać</li>
-                    <li><strong>Pierwsze kliknięcie</strong> na link - odczytuje treść</li>
-                    <li><strong>Drugie kliknięcie</strong> na link - otwiera link</li>
+                    <li><strong>Nawigacja klawiszem Tab</strong> - automatycznie czyta treść elementów podczas przechodzenia</li>
+                    <li><strong>Kliknięcie lub Enter</strong> - normalnie otwiera linki i aktywuje przyciski</li>
                 </ul>
                 <p><strong>Nawigacja:</strong> Użyj <strong>Alt + Strzałka w lewo</strong> lub przycisku "Wstecz" przeglądarki, aby wrócić na poprzednią stronę.</p>
                 <p>Wciśnij <strong>Escape</strong> aby zamknąć to okno.</p>
@@ -105,7 +104,7 @@
         <section id="a11y-wstep" aria-labelledby="a11y-wstep-heading">
             <h2 id="a11y-wstep-heading">Wstęp</h2>
             <p>Śląskie Centrum Profilaktyki i Psychoterapii zobowiązuje się zapewnić dostępność swojej strony internetowej zgodnie z przepisami ustawy z dnia 4 kwietnia 2019 r. o dostępności cyfrowej stron internetowych i aplikacji mobilnych podmiotów publicznych.</p>
-            <p>Adres strony internetowej: <a href="https://projektyslaskiecentrum.com/">https://projektyslaskiecentrum.com/</a></p>
+            <p>Adres strony internetowej: <a href="https://projektyslaskiecentrum.com/" aria-label="Odwiedź stronę projektyslaskiecentrum.com">https://projektyslaskiecentrum.com/</a></p>
         </section>
 
         <section id="a11y-data-publikacja" aria-labelledby="a11y-data-publikacja-heading">
@@ -150,15 +149,15 @@
             <h2 id="a11y-kontakt-heading">Informacje zwrotne i kontakt</h2>
             <p>W przypadku problemów z dostępnością strony prosimy o kontakt:</p>
             <ul>
-                <li>Adres e-mail: <a id="a11y-email" href="mailto:kontakt@projektyslaskiecentrum.com">kontakt@projektyslaskiecentrum.com</a></li>
-                <li>Telefon: <span id="a11y-telefon">+48 32 123 45 67</span></li>
+                <li>Adres e-mail: <a href="mailto:kontakt@projektyslaskiecentrum.com" aria-label="Wyślij email do kontakt@projektyslaskiecentrum.com">kontakt@projektyslaskiecentrum.com</a></li>
+                <li>Telefon: <a href="tel:+48321234567" aria-label="Zadzwoń pod numer +48 32 123 45 67">+48 32 123 45 67</a></li>
             </ul>
         </section>
 
         <section id="a11y-procedura" aria-labelledby="a11y-procedura-heading">
             <h2 id="a11y-procedura-heading">Procedura</h2>
             <p>Każdy ma prawo zgłosić żądanie zapewnienia dostępności cyfrowej strony lub jej elementu. Można również wnioskować o udostępnienie informacji w formie alternatywnej. Żądanie powinno zawierać dane kontaktowe osoby zgłaszającej oraz wskazanie dogodnej formy informacji. Odpowiedź zostanie udzielona w ciągu 7 dni.</p>
-            <p>W przypadku odmowy zapewnienia dostępności można złożyć skargę do <a href="https://www.rpo.gov.pl">Rzecznika Praw Obywatelskich</a>.</p>
+            <p>W przypadku odmowy zapewnienia dostępności można złożyć skargę do <a href="https://www.rpo.gov.pl" aria-label="Odwiedź stronę Rzecznika Praw Obywatelskich - otwiera się w nowej karcie" target="_blank">Rzecznika Praw Obywatelskich</a>.</p>
         </section>
 
         <section id="a11y-dostepnosc-arch" aria-labelledby="a11y-dostepnosc-arch-heading">
