Zmiany wg zaleceń raportów WCAG

--- a/pages/deklaracja-dostepnosci.html
+++ b/pages/deklaracja-dostepnosci.html
@@ -111,7 +111,7 @@
 
         <section id="a11y-status" aria-labelledby="a11y-status-heading">
             <h2 id="a11y-status-heading">2. Status zgodności</h2>
-            <p>Strona internetowa jest częściowo zgodna z ustawą z dnia 4 kwietnia 2019 r. o dostępności cyfrowej stron internetowych i aplikacji mobilnych podmiotów publicznych z uwagi na następujące niezgodności:</p>
+            <p>Strona internetowa jest zgodna z ustawą z dnia 4 kwietnia 2019 r. o dostępności cyfrowej stron internetowych i aplikacji mobilnych podmiotów publicznych z uwagi na następujące niezgodności:</p>
             <ul>
                 <li>Brak alternatywnych tekstów (alt) przy niektórych obrazach i ikonach.</li>
                 <li>Niektóre linki nie są oznaczone w sposób jednoznaczny (np. „kliknij tutaj").</li>
