--- a/pages/deklaracja-dostępnosci-draft.html
+++ b/pages/deklaracja-dostępnosci-draft.html
@@ -146,6 +146,7 @@
                 <li><strong>✅ Poprawiono rozmiary czcionek</strong> - wszystkie teksty spełniają minimalne wymagania czytelności</li>
                 <li><strong>✅ Wzbogacono opisy ARIA</strong> - dodano szczegółowe aria-labels dla lepszej obsługi czytników ekranu</li>
                 <li><strong>✅ Zoptymalizowano nawigację</strong> - pełna obsługa klawiaturą i technologiami wspomagającymi</li>
+                <li><strong>✅ Udostępniono pliki WORD dokumentów z poprawnym formatowaniem</strong> - standardowa obsługa przez czytniki ekranu</li>
             </ul>
             <p><strong>Obecnie strona nie zawiera żadnych błędów krytycznych dostępności.</strong></p>
         </section>
