Przywrocona strona dostepnosci

--- a/pages/deklaracja-dostępnosci.html
+++ b/pages/deklaracja-dostępnosci.html
@@ -147,8 +147,9 @@
                 <li><strong>✅ Wzbogacono opisy ARIA</strong> - dodano szczegółowe aria-labels dla lepszej obsługi czytników ekranu</li>
                 <li><strong>✅ Zoptymalizowano nawigację</strong> - pełna obsługa klawiaturą i technologiami wspomagającymi</li>
                 <li><strong>✅ Udostępniono pliki WORD dokumentów z poprawnym formatowaniem</strong> - standardowa obsługa przez czytniki ekranu</li>
+                
             </ul>
-            <p><strong>Obecnie strona nie zawiera żadnych błędów krytycznych dostępności.</strong></p>
+            <p><strong>Obecnie strona nie zawiera żadnych błędów krytycznych dostępności.</strong></p>git
         </section>
 
         <section id="a11y-dostepnosc-arch" aria-labelledby="a11y-dostepnosc-arch-heading">
