Dodanie hashtagu #FunduszeUE

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projekty - Śląskie Centrum Profilaktyki i Psychoterapii (Wersja Dostępna)</title>
+    <title>Projekty - Śląskie Centrum Profilaktyki i Psychoterapii</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body data-theme="normal">
@@ -95,6 +95,7 @@
                 <a href="index.html" aria-label="Strona główna Śląskiego Centrum Profilaktyki i Psychoterapii"><img src="media/images/logo-scpip-1.png" alt="Logo Śląskiego Centrum Profilaktyki i Psychoterapii"></a>
             </div>
             <h1>Projekty Śląskiego Centrum Profilaktyki i Psychoterapii</h1>
+            <h2>#FunduszeUE</h2>
         </div>
     </header>
 
