Przeniesienie hashtagu #FunduszeUE

--- a/index.html
+++ b/index.html
@@ -95,7 +95,6 @@
                 <a href="index.html" aria-label="Strona główna Śląskiego Centrum Profilaktyki i Psychoterapii"><img src="media/images/logo-scpip-1.png" alt="Logo Śląskiego Centrum Profilaktyki i Psychoterapii"></a>
             </div>
             <h1>Projekty Śląskiego Centrum Profilaktyki i Psychoterapii</h1>
-            <h2>#FunduszeUE</h2>
         </div>
     </header>
 
@@ -115,7 +114,7 @@
 
     <main id="main-content" class="container">
         <section id="o-projektach" aria-labelledby="o-projektach-heading">
-            <h2 id="o-projektach-heading">O projektach</h2>
+            <h2 id="o-projektach-heading">O projektach - #FunduszeUE</h2>
             <p>Śląskie Centrum Profilaktyki i Psychoterapii realizuje projekty skierowane do mieszkańców, pracowników i uczniów miasta Katowice oraz Rudy Śląskiej:</p>
             <ul>
                 <li>"Strefa Transformacji w Katowicach 2.0"</li>
