--- a/pages/deklaracja-dostepnosci.html
+++ b/pages/deklaracja-dostepnosci.html
@@ -89,6 +89,8 @@
                 <a href="../index.html" aria-label="Strona główna Śląskiego Centrum Profilaktyki i Psychoterapii"><img src="../media/images/logo-scpip-1.png" alt="Logo Śląskiego Centrum Profilaktyki i Psychoterapii"></a>
             </div>
             <h1>Deklaracja dostępności</h1>
+            <h3>#FunduszeUE</h3>
+
         </div>
     </header>
 
