Zmiana danych kontaktowych w 2 proj. ZWROTNICA na dane Staszka

--- a/index.html
+++ b/index.html
@@ -274,8 +274,8 @@
                 <h3>Kontakt w sprawie projektu</h3>
                 <p>Komunikacja z uczestnikami projektu odbywa się kilkoma kanałami (e-mail, telefon, spotkania osobiste w biurze projektu ul. Ligocka 5, Katowice). Informacje kontaktowe znajdują się na plakacie projektu oraz na stronie internetowej i facebooku: Zwrotnica – integracja na dobrym torze w Katowicach.</p>
                 <ul>
-                    <li>Telefonicznie: <a href="tel:+48537181444" aria-label="Zadzwoń pod numer +48 537 181 444"><strong>+48 537 181 444</strong></a></li>
-                    <li>Mailowo: <a href="mailto:zwrotnica.katowice@gmail.com?subject=ZWROTNICA – integracja na dobrym torze w Katowicach 2.0" aria-label="Wyślij email do zwrotnica.katowice@gmail.com"><strong>zwrotnica.katowice@gmail.com</strong></a></li>
+                    <li>Telefonicznie: <a href="tel:+48537181444" aria-label="Zadzwoń pod numer +48 792 377 809"><strong>+48 792 377 809</strong></a></li>
+                    <li>Mailowo: <a href="mailto:staszekscpip@gmail.com?subject=ZWROTNICA – integracja na dobrym torze w Katowicach 2.0" aria-label="Wyślij email do staszekscpip@gmail.com"><strong>staszekscpip@gmail.com</strong></a></li>
                 </ul>
             </div>
             <h3>Dokumenty rekrutacyjne do projektu</h3>
@@ -312,8 +312,8 @@
                 <h3>Kontakt w sprawie projektu</h3>
                 <p>W sprawach dotyczących projektu prosimy o kontakt:</p>
                 <ul>
-                    <li>Telefonicznie: <a href="tel:+48574175150" aria-label="Zadzwoń pod numer +48 574 175 150"><strong>+48 574 175 150</strong></a></li>
-                    <li>Mailowo: <a href="mailto:magdalena.scpip@gmail.com?subject=ZWROTNICA – integracja na dobrym torze w Rudzie Śląskiej" aria-label="Wyślij email do magdalena.scpip@gmail.com"><strong>magdalena.scpip@gmail.com</strong></a></li>
+                    <li>Telefonicznie: <a href="tel:+48574175150" aria-label="Zadzwoń pod numer +48 792 377 809"><strong>+48 792 377 809</strong></a></li>
+                    <li>Mailowo: <a href="mailto:staszekscpip@gmail.com ?subject=ZWROTNICA – integracja na dobrym torze w Rudzie Śląskiej" aria-label="Wyślij email do staszekscpip@gmail.com "><strong>staszekscpip@gmail.com </strong></a></li>
                 </ul>
             </div>
             <h3>Dokumenty rekrutacyjne do projektu</h3>
