Zmiana przycisku dostępności

--- a/index.html
+++ b/index.html
@@ -9,13 +9,11 @@
 <body data-theme="normal">
 
     <div class="panel-toggles">
-        <button id="nav-panel-toggle" class="panel-toggle-btn left" aria-label="Otwórz panel nawigacji" aria-controls="nav-panel" aria-expanded="false">
+        <button id="nav-panel-toggle" class="panel-toggle-btn left" aria-label="Nawigacja: Otwórz panel nawigacji" aria-controls="nav-panel" aria-expanded="false">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"></path></svg>
-            <span>Nawigacja</span>
         </button>
-        <button id="a11y-panel-toggle" class="panel-toggle-btn right" aria-label="Otwórz panel dostępności" aria-controls="a11y-panel" aria-expanded="false">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M12 2c1.1 0 2 .9 2 2s-.9 2-2 2-2-.9-2-2 .9-2 2-2zm9 7h-6.5c-.8 0-1.5.7-1.5 1.5V22h-2v-6h-1v6H7v-8.5c0-.8-.7-1.5-1.5-1.5H3V7h2.5c.8 0 1.5-.7 1.5-1.5V3h1v2.5c0 .8.7 1.5 1.5 1.5h5c.8 0 1.5-.7 1.5-1.5V3h1v2.5c0 .8.7 1.5 1.5 1.5H19v2z"></path></svg>
-            <span>Dostępność</span>
+        <button id="a11y-panel-toggle" class="panel-toggle-btn right" aria-label="Dostępność: Otwórz panel dostępności" aria-controls="a11y-panel" aria-expanded="false">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-accessibility-icon lucide-accessibility"><circle cx="16" cy="4" r="1"/><path d="m18 19 1-7-6 1"/><path d="m5 8 3-3 5.5 3-2.36 3.5"/><path d="M4.24 14.5a5 5 0 0 0 6.88 6"/><path d="M13.76 17.5a5 5 0 0 0-6.88-6"/></svg>
         </button>
     </div>
 
