--- a/index.html
+++ b/index.html
@@ -344,6 +344,8 @@
             
             <h4>Pozostałe dokumenty</h4>
             <div class="document-link-wrapper"><a href="docs/ZWROTNICA_RSL-HFW_Strefa_Ruda_06_2025.pdf" target="_blank" aria-label="HFW-FESL.07.02-IZ.01-060D czerwiec 2025 - PDF - otworzy się w nowej karcie">HFW-FESL.07.02-IZ.01-060D czerwiec 2025 - PDF (217 KB)</a></div>
+            <div class="document-link-wrapper"><a href="docs/ZWROTNICA_RSL-Harmonogram_strefa_transformacji_w_rudzie_slaskiej_2_0_HFW_ST_RS_09_2025.pdf" target="_blank" aria-label="Harmonogram Zwrotnica Ruda Śląska wrzesień 2025 - PDF - otworzy się w nowej karcie">Harmonogram Zwrotnica Ruda Śląska wrzesień 2025 - PDF (185 KB)</a></div>
+           
         </section>
 
         <section id="freedom" aria-labelledby="freedom-heading">
@@ -447,3 +449,4 @@
 </body>
 
 </html>
+
