Dodaj linki do nowych dokumentów PDF w sekcji 'Pozostałe dokumenty' dla wszystkich projektów

--- a/index.html
+++ b/index.html
@@ -174,6 +174,9 @@
             <div class="document-link-wrapper"><a href="docs/STREFAT_KAT-hfw_6_2025.pdf" target="_blank" aria-label="Harmonogram czerwiec 2025 - HFW 6 2025 - PDF - otworzy się w nowej karcie">Harmonogram czerwiec 2025 - HFW 6 2025 - PDF (221 KB)</a></div>
             <!-- OSTATNIA AKTUALIZACJA:2025.09.11-10:40-Oryginalna nazwa pliku: Harmonogram_Strefa_Transformacji_w_Katowicach_2.0_HFW_9_2025.pdf -->
             <div class="document-link-wrapper"><a href="docs/STREFAT_KAT-Harmonogram_strefa_transformacji_w_katowicach_2_0_HFW_9_2025.pdf" target="_blank" aria-label="Harmonogram Strefa Transformacji Katowice wrzesień 2025 - PDF - otworzy się w nowej karcie">Harmonogram Strefa Transformacji Katowice wrzesień 2025 - PDF (220 KB)</a></div>
+
+            <h4>Pozostałe dokumenty</h4>
+            <div class="document-link-wrapper"><a href="docs/STREFAT_KAT-HFW_10_2025.pdf" target="_blank" aria-label="Harmonogram Form Wsparcia - październik 2025 - PDF - otworzy się w nowej karcie">Harmonogram Form Wsparcia - październik 2025 - PDF (225 KB)</a></div>
         </section>
 
         <section id="strefa-ruda" aria-labelledby="strefa-ruda-heading">
@@ -221,6 +224,9 @@
             <div class="document-link-wrapper"><a href="docs/STREFAT_RSL-klauzula_rodo_scpip_zwrotnica.docx" target="_blank" aria-label="Klauzula RODO SCPIP - Zwrotnica - WORD - zostanie pobrana">Klauzula RODO SCPIP - Zwrotnica - WORD (70 KB)</a></div>
             <!-- OSTATNIA AKTUALIZACJA:2025.09.12-15:11-Oryginalna nazwa pliku: Zgoda_RODO_Zwrotnica.docx -->
             <div class="document-link-wrapper"><a href="docs/STREFAT_RSL-zgoda_rodo_zwrotnica.docx" target="_blank" aria-label="Zgoda RODO Zwrotnica - WORD - zostanie pobrany">Zgoda RODO Zwrotnica - WORD (56 KB)</a></div>
+
+            <h4>Pozostałe dokumenty</h4>
+            <div class="document-link-wrapper"><a href="docs/STREFAT_RLS-HFW_TRS_10_2025.pdf" target="_blank" aria-label="Harmonogram Form Wsparcia - październik 2025 - PDF - otworzy się w nowej karcie">Harmonogram Form Wsparcia - październik 2025 - PDF (227 KB)</a></div>
         </section>
 
         <section id="zwrotnica-katowice" aria-labelledby="zwrotnica-katowice-heading">
@@ -303,6 +309,7 @@
             <div class="document-link-wrapper"><a href="docs/ZWROTNICA_KAT-harmonogram_lipiec_2025_zwrotnica.pdf" target="_blank" aria-label="Harmonogram Form Wsparcia Lipiec 2025 - PDF - otworzy się w nowej karcie">Harmonogram Form Wsparcia Lipiec 2025 - PDF (217 KB)</a></div>
             <!-- OSTATNIA AKTUALIZACJA:2025.09.11-10:40-Oryginalna nazwa pliku: Harmonogram_ZWROTNICA_-_integracja_na_dobrym_torze_w_Katowicach_wrzesień_2025.pdf -->
             <div class="document-link-wrapper"><a href="docs/ZWROTNICA_KAT-Harmonogram_integracja_na_dobrym_torze_w_katowicach_wrzesien_2025.pdf" target="_blank" aria-label="Harmonogram integracja na dobrym torze wrzesień 2025 - PDF - otworzy się w nowej karcie">Harmonogram integracja na dobrym torze wrzesień 2025 - PDF (244 KB)</a></div>
+            <div class="document-link-wrapper"><a href="docs/ZWROTNICA_KAT-HFW_10_2025.pdf" target="_blank" aria-label="Harmonogram Form Wsparcia - październik 2025 - PDF - otworzy się w nowej karcie">Harmonogram Form Wsparcia - październik 2025 - PDF (221 KB)</a></div>
         </section>
         
         <section id="zwrotnica-ruda" aria-labelledby="zwrotnica-ruda-heading">
@@ -382,6 +389,9 @@
             <div class="document-link-wrapper"><a href="docs/freeDOM_KAT-hfw_freedom_06_2025.pdf" target="_blank" aria-label="HFW freeDOM 06 2025 - PDF - otworzy się w nowej karcie">HFW freeDOM 06 2025 - PDF (233 KB)</a></div>
             <!-- OSTATNIA AKTUALIZACJA:2025.09.11-10:40-Oryginalna nazwa pliku: Harmonogram_freeDOM_-_mieszkanie_treningowe_HFW_FD_ 09_2025.pdf -->
             <div class="document-link-wrapper"><a href="docs/freeDOM_KAT-Harmonogram_mieszkanie_treningowe_HFW_FD_09_2025.pdf" target="_blank" aria-label="Harmonogram freeDOM mieszkanie treningowe wrzesień 2025 - PDF - otworzy się w nowej karcie">Harmonogram freeDOM mieszkanie treningowe wrzesień 2025 - PDF (244 KB)</a></div>
+
+            <h4>Pozostałe dokumenty</h4>
+            <div class="document-link-wrapper"><a href="docs/freeDOM_KAT-HFW_Freedom_20_2025.pdf" target="_blank" aria-label="Harmonogram Form Wsparcia - październik 2025 - PDF - otworzy się w nowej karcie">Harmonogram Form Wsparcia - październik 2025 - PDF (240 KB)</a></div>
         </section>
 
         <section id="praktykant" aria-labelledby="praktykant-heading">
@@ -426,6 +436,9 @@
             <div class="document-link-wrapper"><a href="docs/Praktykant_KAT-harmonogram_lipiec_2025.pdf" target="_blank" aria-label="Harmonogram Lipiec 2025 - PDF - otworzy się w nowej karcie">Lipiec 2025 - PDF (220 KB)</a></div>
             <!-- OSTATNIA AKTUALIZACJA:2025.09.11-10:40-Oryginalna nazwa pliku: Harmonogram_Praktykant_wrzesień_2025.pdf -->
             <div class="document-link-wrapper"><a href="docs/Praktykant_KAT-Harmonogram_wrzesien_2025.pdf" target="_blank" aria-label="Harmonogram Praktykant wrzesień 2025 - PDF - otworzy się w nowej karcie">Harmonogram Praktykant wrzesień 2025 - PDF (218 KB)</a></div>
+
+            <h4>Pozostałe dokumenty</h4>
+            <div class="document-link-wrapper"><a href="docs/Praktykant_KAT-HFW_10_2025.pdf" target="_blank" aria-label="Harmonogram Form Wsparcia - październik 2025 - PDF - otworzy się w nowej karcie">Harmonogram Form Wsparcia - październik 2025 - PDF (224 KB)</a></div>
         </section>
 
     </main>
