Update index.html (via Pages CMS)

--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
                 ul. Ligocka 5, 40-570 Katowice
             </address>
             <p style="margin-top: 2rem;">
-                <a href="pages/deklaracja-dostepnosci.html">Deklaracja Dostępności</a>
+                <a href="pages/deklaracja-dostepnosci.html">DEKLARACJA DOSTĘPNOŚCI</a>
             </p>
         </div>
     </footer>
