Dodano harmonogramy na listopad 2025 dla projektów Praktykant, Strefa Transformacji Katowice i Zwrotnica Ruda Śląska

--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
             <!-- OSTATNIA AKTUALIZACJA:2025.09.11-10:40-Oryginalna nazwa pliku: Harmonogram_Strefa_Transformacji_w_Katowicach_2.0_HFW_9_2025.pdf -->
             <div class="document-link-wrapper"><a href="docs/STREFAT_KAT-Harmonogram_strefa_transformacji_w_katowicach_2_0_HFW_9_2025.pdf" target="_blank" aria-label="Harmonogram Strefa Transformacji Katowice wrzesień 2025 - PDF - otworzy się w nowej karcie">Harmonogram Strefa Transformacji Katowice wrzesień 2025 - PDF (220 KB)</a></div>
             <div class="document-link-wrapper"><a href="docs/STREFAT_KAT-HFW_10_2025.pdf" target="_blank" aria-label="Harmonogram Form Wsparcia - październik 2025 - PDF - otworzy się w nowej karcie">Harmonogram Form Wsparcia - październik 2025 - PDF (225 KB)</a></div>
+            <div class="document-link-wrapper"><a href="docs/STREFAT_KAT-HFW_11_2025.pdf" target="_blank" aria-label="Harmonogram Form Wsparcia - listopad 2025 - PDF - otworzy się w nowej karcie">Harmonogram Form Wsparcia - listopad 2025 - PDF</a></div>
         </section>
 
         <section id="strefa-ruda" aria-labelledby="strefa-ruda-heading">
@@ -354,6 +355,7 @@
             <div class="document-link-wrapper"><a href="docs/ZWROTNICA_RSL-Harmonogram_strefa_transformacji_w_rudzie_slaskiej_2_0_HFW_ST_RS_09_2025.pdf" target="_blank" aria-label="Harmonogram Zwrotnica Ruda Śląska wrzesień 2025 - PDF - otworzy się w nowej karcie">Harmonogram Zwrotnica Ruda Śląska wrzesień 2025 - PDF (185 KB)</a></div>
             <!-- OSTATNIA AKTUALIZACJA:2025.10.24-16:35-Oryginalna nazwa pliku: ZWROTNICA_RLS-HFW_10_2025.pdf -->
             <div class="document-link-wrapper"><a href="docs/ZWROTNICA_RLS-HFW_10_2025.pdf" target="_blank" aria-label="Harmonogram Form Wsparcia - październik 2025 - PDF - otworzy się w nowej karcie">Harmonogram Form Wsparcia - październik 2025 - PDF (216 KB)</a></div>
+            <div class="document-link-wrapper"><a href="docs/ZWROTNICA_RLS-HFW_11_2025.pdf" target="_blank" aria-label="Harmonogram Form Wsparcia - listopad 2025 - PDF - otworzy się w nowej karcie">Harmonogram Form Wsparcia - listopad 2025 - PDF</a></div>
            
         </section>
 
@@ -441,6 +443,7 @@
 
             <h4>Pozostałe dokumenty</h4>
             <div class="document-link-wrapper"><a href="docs/Praktykant_KAT-HFW_10_2025.pdf" target="_blank" aria-label="Harmonogram Form Wsparcia - październik 2025 - PDF - otworzy się w nowej karcie">Harmonogram Form Wsparcia - październik 2025 - PDF (224 KB)</a></div>
+            <div class="document-link-wrapper"><a href="docs/Praktykant_KAT-HFW_11_2025.pdf" target="_blank" aria-label="Harmonogram Form Wsparcia - listopad 2025 - PDF - otworzy się w nowej karcie">Harmonogram Form Wsparcia - listopad 2025 - PDF</a></div>
         </section>
 
     </main>
